--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,11 @@ find_package(Boost COMPONENTS iostreams filesystem REQUIRED)
 
 # Define the library target
 add_library(sapling
-        src/phylo_tree.cpp include/sapling/tree.h
+        src/tree.cpp include/sapling/tree.h
         src/phylo_node.cpp include/sapling/phylo_node.h
         src/newick.cpp include/sapling/newick.h
-        src/io.cpp include/sapling/io.h)
+        src/io.cpp include/sapling/io.h
+        include/sapling/sapling.h)
 
 # Include directories for the library
 target_include_directories(sapling PUBLIC
@@ -22,8 +23,24 @@ target_include_directories(sapling PUBLIC
 target_link_libraries(sapling PUBLIC Boost::iostreams Boost::filesystem)
 
 
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    add_definitions(-DSAPLING_DEBUG)
+endif()
+
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    add_compile_options(-fsanitize=address)
+    link_libraries(-fsanitize=address)
+endif()
+
+
+
 # Option to build tests
 option(BUILD_TESTS "Build the tests for Sapling" OFF)
+
+# Enable fPIC
+#set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+set_property(TARGET sapling PROPERTY POSITION_INDEPENDENT_CODE ON)
+
 
 # Test target
 if(BUILD_TESTS)
@@ -52,10 +69,10 @@ install(EXPORT sapling-targets
         DESTINATION lib/cmake/sapling)
 
 # Create a version file
-#include(CMakePackageConfigHelpers)
-#write_basic_package_version_file("saplingConfigVersion.cmake"
-#        VERSION 0.1)
-##        COMPATIBILITY SameMajorVersion)
+include(CMakePackageConfigHelpers)
+write_basic_package_version_file("saplingConfigVersion.cmake"
+        VERSION 0.1
+        COMPATIBILITY SameMajorVersion)
 
 # Install the config and version files
 install(FILES "saplingConfig.cmake" "saplingConfigVersion.cmake"
